# dafui

./: CMakeLists.txt  INSTALL  README  dafui.deps  dafui.pc.cmake  meson.build
data/: config.h.cmake
lib/: meson.build
lib/Animation/: KeyFrame.vala  PropertyAnimator.vala
lib/Core/: AbstractListModel.vala  AbstractTreeModel.vala
lib/Widgets/: Card.vala  DeckLayout.vala  ICard.vala  IDeckLayout.vala
po/: CMakeLists.txt
src/: CMakeLists.txt
src/Animation/: AnimatableAdapter.vala  AnimationMode.vala  IAnimatable.vala  TimeLine.vala
src/Widgets/: AbstractDeckLayout.vala  AnimatedCard.vala  AnimatedDeckLayout.vala
test/: CMakeLists.txt  SelectionInListTest.vala  TestMain.vala  meson.build
test/Model/: Address.vala  Gender.vala  Person.vala
